--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,7 @@
 {
+    "select and insert tag dialog shortcut - browser, add, edit current window": "Alt+Shift+5",
+    "select and insert tag dialog shortcut for edit tag dialog": "Ctrl+J",
     "tag dialog shortcut - reviewer": "w",
     "tag dialog shortcut - browser, add, edit current window": "Alt+Shift+6",
-    "select and insert tag dialog shortcut - browser, add, edit current window": "Alt+Shift+5",
-    "select and insert tag dialog shortcut for edit tag dialog": "Ctrl+J"
+    "tag dialog space": ""
 }
