--- a/src/config.json
+++ b/src/config.json
@@ -1,7 +1,8 @@
 {
-    "select and insert tag dialog shortcut - browser, add, edit current window": "Alt+Shift+5",
-    "select and insert tag dialog shortcut for edit tag dialog": "Ctrl+J",
-    "tag dialog shortcut - reviewer": "w",
-    "tag dialog shortcut - browser, add, edit current window": "Alt+Shift+6",
-    "tag dialog space": ""
+    "basic_but_quick": true,
+    "editor: show filterdialog to add single tag": "Ctrl+t, a",
+    "in tag lines dialog: open filterdialog for single tag": "Ctrl+j",
+    "in tag lines dialog: insert additional line": "Ctrl+i",
+    "open tag lines dialog: from reviewer": "p",
+    "open tag lines dialog: from editor": "Ctrl+t, d"
 }
