--- a/src/config.json
+++ b/src/config.json
@@ -2,6 +2,7 @@
     "basic_but_quick": true,
     "editor: show filterdialog to add single tag": "Ctrl+t, a",
     "in tag lines dialog: open filterdialog for single tag": "Ctrl+j",
+    "in tag lines dialog: search browser for tag": "Ctrl+s",
     "in tag lines dialog: insert additional line": "Ctrl+i",
     "open tag lines dialog: from reviewer": "p",
     "open tag lines dialog: from editor": "Ctrl+t, d"
