--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,4 +1,4 @@
 {
-    "package": "1135507717",
-    "name": "Extended Tag Add/Edit Dialog"
+    "name": "Extended Tag Add/Edit Dialog",
+    "package": "1135507717"
 }
